Switch database from Nitrite to Hsqldb Better parsing logic for registry numbers